# gtd-agents

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.prd-reviews/gtd-agents/: prd-draft.md  state.env
gtd_agents/: cli.py  models.py
